--- a/dummyconfigs/hypr/hyprland.conf
+++ b/dummyconfigs/hypr/hyprland.conf
@@ -9,21 +9,21 @@ $menu = tofi-drun -c ~/.config/tofi/configA --drun-launch=true
 
 #exec-once = mpvpaper -o "loop no-audio" '*' ~/Downloads/.wallpaper/got.mp4
 #exec-once = bash -c 'WALLPAPER_DIR="$HOME/Downloads/.wallpaper/gif"; while true; do for video in "$WALLPAPER_DIR"/*.{mp4,mkv,webm,gif}; do [ -e "$video" ] || continue; pkill -x mpvpaper 2>/dev/null; mpvpaper -o "no-audio" "*" "$video"; done; done'
-exec-once = swww-daemon&
-#exec-once = swww img "~/Downloads/.wallpaper/wallpaper.webp"
-exec-once = bash -c 'WALLPAPER_DIR="$HOME/Downloads/.wallpaper/slideshow"; while true; do IMG=$(find "$WALLPAPER_DIR" -type f | shuf -n 1); swww img "$IMG" --transition-type grow --transition-duration 3 --resize fit; sleep 5; done'
-exec-once = waybar&   # Assuming a Wayland-compatible bar
-exec-once = emote&
-exec-once = bash -c 'BAT=/sys/class/power_supply/BAT1; while true; do CAP=$(<"$BAT/capacity"); STAT=$(<"$BAT/status"); if [[ "$STAT" != "Charging" && "$STAT" != "Full" && "$CAP" -le 15 ]]; then dunstify -u critical -i battery-caution "⚡ Battery Low" "Battery at ${CAP}% (${STAT})"; fi; sleep 60; done'&
+#exec-once = bash -c 'WALLPAPER_DIR="$HOME/Downloads/.wallpaper"; while true; do IMG=$(find "$WALLPAPER_DIR" -type f | shuf -n 1); swww img "$IMG" --transition-type grow --transition-duration 3; sleep 5; done'
+
+exec-once = swww-daemon 
+exec-once = gammastep -c /home/ritish/.config/gammastep/config.ini
+exec-once = waybar
+exec-once = emote
+exec-once = bash -c 'BAT=/sys/class/power_supply/BAT1; while true; do CAP=$(<"$BAT/capacity"); STAT=$(<"$BAT/status"); if [[ "$STAT" != "Charging" && "$STAT" != "Full" && "$CAP" -le 15 ]]; then dunstify -u critical -i battery-caution "⚡ Battery Low" "Battery at ${CAP}% (${STAT})"; fi; sleep 60; done' &
 exec-once = dunst
-exec-once = dbus-launch --sh-syntax
 exec-once = hyprpolkitagent
-exec-once = wl-paste --type text --watch cliphist store  # Clipboard history (text)
-exec-once = wl-paste --type image --watch cliphist store  # Clipboard history (images)
-exec-once = nm-applet  # Network manager tray
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+exec-once = nm-applet
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hypridle
-# Monitor configuration
+exec-once = sleep 0.5 && swww img "/home/dummy/Downloads/.wallpaper/wallpaper.webp"
 monitor=,preferred,auto,1.2
 
 # Input settings
