--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -15,7 +15,6 @@ exec-once = swww-daemon
 exec-once = gammastep -c /home/ritish/.config/gammastep/config.ini
 exec-once = waybar
 exec-once = emote
-exec-once = llama-server -m ".cache/llama.cpp/Qwen_Qwen2.5-Coder-1.5B-Instruct-GGUF_qwen2.5-coder-1.5b-instruct-q4_k_m.gguf" -ngl 50
 exec-once = bash -c 'BAT=/sys/class/power_supply/BAT1; while true; do CAP=$(<"$BAT/capacity"); STAT=$(<"$BAT/status"); if [[ "$STAT" != "Charging" && "$STAT" != "Full" && "$CAP" -le 15 ]]; then dunstify -u critical -i battery-caution "⚡ Battery Low" "Battery at ${CAP}% (${STAT})"; fi; sleep 60; done' &
 exec-once = dunst
 exec-once = hyprpolkitagent
@@ -39,8 +38,7 @@ input {
 
 # Gestures
 gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
+gesture = 3, horizontal, workspace
 }
 
 # Device settings
